# cAmp2

./: .gitignore  CMakeLists.txt  ClassDiagram.xmi  Doxyfile  README.md
data/: colors.xml  themes.xml
libs/: imgui_widgets.cpp  nfd_gtk.c  nfd_win.cpp
source/: App.cpp  App.h  AppConst.cpp  AppConst.h  AppLog.cpp  AppLog.h  AppSFMLDraw.cpp  AppSFMLDraw.h  AppSFMLMain.cpp  AppSFML_Draw.cpp  AppSFML_Draw.h  AppSFML_DrawPlayer.cpp  AppSFML_DrawPlaylist.cpp  AppSFML_DrawPlsHeader.cpp  AppSFML_DrawPlsSlider.cpp  AppSFML_DrawTabs.cpp  AppSFML_DrawUtil.cpp  AppSFML_DrawVisual.cpp  AppSFML_GuiDraw.cpp  AppSFML_GuiOptions.cpp  AppSFML_GuiStyle.cpp  AppSFML_Main.cpp  App_Keys.cpp  App_Mouse.cpp  App_Tabs.cpp  App_Tabs.cpp.autosave  Audio.h  AudioBass.cpp  AudioBass.h  AudioBass_Init.cpp  AudioBass_Play.cpp  AudioBass_Update.cpp  FileSystem.cpp  FileSystem.h  Playlist.cpp  Playlist.h  Playlist_Advanced.cpp  Playlist_Basic.cpp  Playlist_Cursors.cpp  Playlist_File.cpp  (+17 more)
source/App/: App.cpp  App.h  AppActions.cpp  AppActions.h  AppActionsConst.cpp  AppActionsDefaults.cpp  AppActionsEnum.h  AppConst.cpp  AppConst.h  App_Init.cpp  App_Keys.cpp  App_Mouse.cpp  App_Tabs.cpp
source/AppSFML/: AppSFML_Draw.h  AppSFML_DrawPlayer.cpp  AppSFML_DrawPlaylist.cpp  AppSFML_DrawPlsHeader.cpp  AppSFML_DrawPlsSlider.cpp  AppSFML_DrawTabs.cpp  AppSFML_DrawUtil.cpp  AppSFML_DrawVisual.cpp  AppSFML_GuiDraw.cpp  AppSFML_GuiDrawPls.cpp  AppSFML_GuiHelp.cpp  AppSFML_GuiKeys.cpp  AppSFML_GuiOptions.cpp  AppSFML_GuiPlayer.cpp  AppSFML_GuiPlaylist.cpp  AppSFML_GuiStyle.cpp  AppSFML_GuiTabs.cpp  AppSFML_GuiUtil.cpp  AppSFML_GuiView.cpp  AppSFML_GuiVisual.cpp  AppSFML_GuiWindows.cpp  AppSFML_ImGuiStyle.cpp  AppSFML_Main.cpp
source/Audio/: Audio.cpp  Audio.h  AudioBass.h  AudioBass_Init.cpp  AudioBass_Play.cpp  AudioBass_Update.cpp
source/Playlist/: Playlist.h  Playlist_Advanced.cpp  Playlist_Basic.cpp  Playlist_Cursors.cpp  Playlist_File.cpp  Playlist_Update.cpp  Track.cpp  Track.h
source/Settings/: ColorSets.cpp  ColorSets.h  FontSets.cpp  FontSets.h  Settings.cpp  Settings.h  Skin.cpp  SkinElement.h  Themes.cpp  Themes.h  TimeColors.cpp  TimeColors.h  View.cpp  View.h  VisualColors.cpp  VisualColors.h
source/System/: AppLog.cpp  FileSystem.cpp  FileSystem.h  LogFile.cpp  LogFile.h  Rating.cpp  Rating.h  Stats.cpp  Stats.h  Utilities.cpp  Utilities.h  defines.h
